--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi>=0.116.1",
     "numpy>=2.3.2",
     "onnxruntime>=1.22.1",
-    "openexr>=3.3.5",
     "pillow>=11.3.0",
+    "python-multipart>=0.0.20",
     "requests>=2.32.5",
+    "uvicorn>=0.35.0",
 ]
