--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.8'
 services:
   moge-api:
     build: .
+    container_name: moge-api-container
+    image: moge-api:latest
     ports:
       - "8000:8000"
     volumes:
